--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/main_page.css' %}">
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
+    <link rel="stylesheet" href="{% static 'css/movie_page.css' %}">
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="{% static 'js/slick.js' %}" type="text/javascript" charset="utf-8"></script>
 </head>
@@ -60,9 +61,9 @@
             </ul>
         </nav>
     </header>
-
-    {% block content %}
-
-    {% endblock %}
+    <main class="container">
+        {% block content %}
+        {% endblock %}
+    </main>
 </body>
 </html>
