--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
     <link rel="stylesheet" href="{% static 'css/movie_page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/genres_page.css' %}">
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="{% static 'js/slick.js' %}" type="text/javascript" charset="utf-8"></script>
 </head>
@@ -26,7 +27,7 @@
             <ul class="site-navigation">
                 {% block nav %}
                     <li>
-                        <a href="">Категории</a>
+                        <a href="{% url 'genres_page_url' %}">Категории</a>
                     </li>
                     <li>
                         <a href="">Топ-100</a>
