added link to genre page

--- a/movies/templates/movies/genres_page.html
+++ b/movies/templates/movies/genres_page.html
@@ -17,7 +17,7 @@
         <ul class="genres-list">
             {% for genre in genres %}
                 <li class="genre-item {{genre.slug}}">
-                    <a href="">
+                    <a href="{{genre.get_absolute_url}}">
                         {{genre.name}}
                     </a>
                 </li>
