--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
     <link rel="stylesheet" href="{% static 'css/movie_page.css' %}">
     <link rel="stylesheet" href="{% static 'css/genres_page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/movies_list.css' %}">
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="{% static 'js/slick.js' %}" type="text/javascript" charset="utf-8"></script>
 </head>
