--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/movie_page.css' %}">
     <link rel="stylesheet" href="{% static 'css/genres_page.css' %}">
     <link rel="stylesheet" href="{% static 'css/movies_list.css' %}">
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="{% static 'js/slick.js' %}" type="text/javascript" charset="utf-8"></script>
 </head>
@@ -50,14 +51,14 @@
                         <a href="">user: {{user.username}}</a>
                     </li>
                     <li>
-                        <a href="">Выйти</a>
+                        <a href="{% url 'logout_page_url' %}">Выйти</a>
                     </li>
                 {% else %}
                     <li>
-                        <a href="">Войти</a>
+                        <a href="{% url 'login_page_url' %}">Войти</a>
                     </li>
                     <li>
-                        <a href="">Регистрация</a>
+                        <a href="{% url 'register_page_url' %}">Регистрация</a>
                     </li>
                 {% endif %}
             </ul>
