changed directory for gif files

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -5,7 +5,7 @@
         {% for message in messages %}
             <div class="message">
                 <p>{{message}}</p>
-                <img src="{% static 'img/success_login.gif' %}">
+                <img src="{% static 'gif/success_login.gif' %}">
             </div>
         {% endfor %}
     {% endif %}
