--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/movie_page.css' %}">
     <link rel="stylesheet" href="{% static 'css/genres_page.css' %}">
     <link rel="stylesheet" href="{% static 'css/movies_list.css' %}">
+    <link rel="stylesheet" href="{% static 'css/profile_page.css' %}">
     <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="{% static 'js/slick.js' %}" type="text/javascript" charset="utf-8"></script>
@@ -48,7 +49,7 @@
             <ul class="user-login">
                 {% if user.is_authenticated %}
                     <li>
-                        <a href="">user: {{user.username}}</a>
+                        <a href="{% url 'profile_page_url' %}">user: {{user.username}}</a>
                     </li>
                     <li>
                         <a href="{% url 'logout_page_url' %}">Выйти</a>
